73-QRotationMatrix3x3 Extension 001 Extends functionality of QRotationMatrix3x3.
74-QScaleMatrix3x3 Extension 001
Extends functionality of QScaleMatrix3x3.

76.QTranslationMatrix Extension 001
Extends functionality of QTranslationMatrix.

78-QTransformationMatrix Extension 001
Extends functionality of QTransformationMatrix.

84-QSpaceConversionMatrix
Class which implements the functionality of transforming world, view and projection matrices.

--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="..\..\..\..\headers\QBaseVector4.h" />
     <ClInclude Include="..\..\..\..\headers\QRotationMatrix3x3.h" />
     <ClInclude Include="..\..\..\..\headers\QScaleMatrix3x3.h" />
+    <ClInclude Include="..\..\..\..\headers\QSpaceConversionMatrix.h" />
     <ClInclude Include="..\..\..\..\headers\QTransformationMatrix.h" />
     <ClInclude Include="..\..\..\..\headers\QTranslationMatrix.h" />
     <ClInclude Include="..\..\..\..\headers\QVector2.h" />
@@ -157,6 +158,7 @@
     <ClCompile Include="..\..\..\..\source\QQuaternion.cpp" />
     <ClCompile Include="..\..\..\..\source\QRotationMatrix3x3.cpp" />
     <ClCompile Include="..\..\..\..\source\QScaleMatrix3x3.cpp" />
+    <ClCompile Include="..\..\..\..\source\QSpaceConversionMatrix.cpp" />
     <ClCompile Include="..\..\..\..\source\QVector2.cpp" />
     <ClCompile Include="..\..\..\..\source\QVector3.cpp" />
     <ClCompile Include="..\..\..\..\source\QVector4.cpp" />
