--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
@@ -114,8 +114,8 @@
     <ClInclude Include="..\..\..\..\headers\DataTypesDefinitions.h" />
     <ClInclude Include="..\..\..\..\headers\MathDefinitions.h" />
     <ClInclude Include="..\..\..\..\headers\QAngle.h" />
-    <ClInclude Include="..\..\..\..\headers\QBaseBox.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseDualQuaternion.h" />
+    <ClInclude Include="..\..\..\..\headers\QBaseHexahedron.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseLineSegment.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseMatrix2x2.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseMatrix3x3.h" />
