89 - Cambiar QBaseSphere por QBaseOrb

--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
@@ -121,6 +121,7 @@
     <ClInclude Include="..\..\..\..\headers\QBaseMatrix3x3.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseMatrix4x3.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseMatrix4x4.h" />
+    <ClInclude Include="..\..\..\..\headers\QBaseOrb.h" />
     <ClInclude Include="..\..\..\..\headers\QBasePlane.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseQuaternion.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseRay.h" />
