--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
@@ -119,6 +119,7 @@
     <ClInclude Include="..\..\..\..\headers\QBaseLineSegment.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseMatrix2x2.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseMatrix3x3.h" />
+    <ClInclude Include="..\..\..\..\headers\QBaseMatrix3x4.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseMatrix4x3.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseMatrix4x4.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseOrb.h" />
