--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="..\..\..\..\headers\QInteger.h" />
     <ClInclude Include="..\..\..\..\headers\QMatrix2x2.h" />
     <ClInclude Include="..\..\..\..\headers\QMatrix3x3.h" />
+    <ClInclude Include="..\..\..\..\headers\QMatrix3x4.h" />
     <ClInclude Include="..\..\..\..\headers\QMatrix4x3.h" />
     <ClInclude Include="..\..\..\..\headers\QMatrix4x4.h" />
     <ClInclude Include="..\..\..\..\headers\QFloat.h" />
@@ -155,6 +156,7 @@
     <ClCompile Include="..\..\..\..\source\QDualQuaternion.cpp" />
     <ClCompile Include="..\..\..\..\source\QMatrix2x2.cpp" />
     <ClCompile Include="..\..\..\..\source\QMatrix3x3.cpp" />
+    <ClCompile Include="..\..\..\..\source\QMatrix3x4.cpp" />
     <ClCompile Include="..\..\..\..\source\QMatrix4x3.cpp" />
     <ClCompile Include="..\..\..\..\source\QMatrix4x4.cpp" />
     <ClCompile Include="..\..\..\..\source\QAngle.cpp" />
