99 - Portar estructura de proyectos de VS2010 a CodeBlocks 10.05
El proyecto ya compila en Linux (con CodeBlocks).
Falta el proyecto de test.

--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Core/Core.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Core/Core.cbp
@@ -17,6 +17,7 @@
 				<Compiler>
 					<Add option="-Wall" />
 					<Add option="-g" />
+					<Add option="-DLINUX32" />
 				</Compiler>
 				<Linker>
 					<Add library="libboost_thread.a" />
