--- a/trunk/projects/CodeBlocks10/QuimeraEngine/System/System.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/System/System.cbp
@@ -16,6 +16,7 @@
 				<Compiler>
 					<Add option="-Wall" />
 					<Add option="-g" />
+					<Add option="-DLINUX32" />
 				</Compiler>
 				<Linker>
 					<Add library="libboost_thread.a" />
