--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="..\..\..\..\headers\QScaleMatrix3x3.h" />
     <ClInclude Include="..\..\..\..\headers\QSpaceConversionMatrix.h" />
     <ClInclude Include="..\..\..\..\headers\QTransformationMatrix.h" />
+    <ClInclude Include="..\..\..\..\headers\QTransformationMatrix3x3.h" />
     <ClInclude Include="..\..\..\..\headers\QTranslationMatrix.h" />
     <ClInclude Include="..\..\..\..\headers\QVector2.h" />
     <ClInclude Include="..\..\..\..\headers\QVector3.h" />
@@ -167,6 +168,7 @@
     <ClCompile Include="..\..\..\..\source\QRotationMatrix3x3.cpp" />
     <ClCompile Include="..\..\..\..\source\QScaleMatrix3x3.cpp" />
     <ClCompile Include="..\..\..\..\source\QSpaceConversionMatrix.cpp" />
+    <ClCompile Include="..\..\..\..\source\QTransformationMatrix3x3.cpp" />
     <ClCompile Include="..\..\..\..\source\QVector2.cpp" />
     <ClCompile Include="..\..\..\..\source\QVector3.cpp" />
     <ClCompile Include="..\..\..\..\source\QVector4.cpp" />
