--- a/trunk/projects/VS2010/QuimeraEngine/Core/Core.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Core/Core.vcxproj
@@ -59,7 +59,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)..\..\..\headers;$(SolutionDir)..\..\..\3rdparty\Boost\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <StringPooling>false</StringPooling>
-      <RuntimeTypeInfo>true</RuntimeTypeInfo>
+      <RuntimeTypeInfo>false</RuntimeTypeInfo>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <InlineFunctionExpansion>Disabled</InlineFunctionExpansion>
     </ClCompile>
